--- a/app/templates/terra/terra-testimony.module.css
+++ b/app/templates/terra/terra-testimony.module.css
@@ -1,5 +1,6 @@
 .container {
     padding: var(--padding-xl) 0;
+    container-type: inline-size;
 }
 
 .cardsWrapper {
@@ -8,7 +9,7 @@
     grid-auto-columns: 540px;
     justify-content: flex-start;
     overflow-x: auto;
-    overflow-y: hidden;
+    overflow-y: visible;
     scroll-snap-type: x mandatory;
     scrollbar-width: none;
     gap: var(--gap-md);
@@ -19,16 +20,23 @@
 }
 
 .itemWrapper {
-    display: flex;
     justify-content: center;
     scroll-snap-align: start;
     padding: var(--padding-md);
     min-width: 0;
 }
 
-@container (max-width: 1023px) {
+@container (max-width: 400px) {
     .cardsWrapper {
-        grid-auto-columns: 100%;
+        display: flex !important;
+        flex-direction: row !important;
+        grid-auto-columns: unset !important;
+    }
+
+    .itemWrapper {
+        flex: 0 0 100% !important;
+        width: 100% !important;
+        padding: var(--padding-md);
     }
 }
 
@@ -42,10 +50,12 @@
     overflow: hidden;
 }
 
-@media (max-width: 767px) {
+@container (max-width: 400px) {
     .card {
-        flex-direction: column;
-        aspect-ratio: auto;
+        flex-direction: column !important;
+        height: auto !important;
+        min-height: min-content !important;
+        overflow: hidden !important;
     }
 }
 
@@ -58,12 +68,15 @@
 }
 
 
-@media (max-width: 767px) {
+@container (max-width: 400px) {
     .terraTestimoniImage {
-        width: 100%;
-        flex: 0 0 auto;
-        max-width: 100%;
-        aspect-ratio: 4/5;
+        width: 100% !important;
+        max-width: 100% !important;
+        flex: 0 0 auto !important;
+        height: auto;
+        aspect-ratio: 3/2;
+        border-top-left-radius: var(--border-radius-lg);
+        border-top-right-radius: var(--border-radius-lg);
     }
 }
 
@@ -83,12 +96,21 @@
     overflow: hidden;
 }
 
-@media (max-width: 767px) {
+@container (max-width: 400px) {
     .terraTestimoniDescriptionCard {
-        width: 100%;
-        flex: 0 0 auto;
-        max-width: 100%;
-        padding: var(--padding-md);
+        width: 100% !important;
+        max-width: 100% !important;
+        flex: 0 0 auto !important;
+        height: auto !important;
+        aspect-ratio: auto !important;
+        min-height: 268px !important;
+        padding: var(--padding-lg) var(--padding-md) !important;
+        overflow: hidden !important;
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: center !important;
+        border-bottom-left-radius: var(--border-radius-lg);
+        border-bottom-right-radius: var(--border-radius-lg);
     }
 }
 
@@ -123,4 +145,10 @@
     color: var(--default-typography-caption);
     line-height: 1.5;
     height: 70px;
+}
+
+@container (max-width: 1023px) {
+    .description {
+        height: auto;
+    }
 }
